--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 </head>
 <body>
     <div class="page-wrapper justify-center align-center">
-        <img src="" alt="">
+        <img src="images/wavy-lines-1.svg" class="item-1">
+        <img src="images/wavy-lines-2.svg" class="item-2">
+        <img src="images/dots-1.svg" class="item-3">
+        <img src="images/dots-2.svg" class="item-4">
+        <img src="images/footer-wave-bottom.svg" class="item-5">
+        <img src="images/footer-wave-top.svg" class="item-6">
         <!-- ADD ABSOLUTE POSITIONED IMAGES HERE -->
         <div class="container login">
+            <button type="button" class="cancelbtn"><img src="images/times-icon.svg"></button>
             <!-- ADD CANCEL BUTTON HERE -->
             <div class="row">
                 <form class="column gap-20" method="POST">
